--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     
     <main>
-        <h1>About Me</h1>
+        <h1 id="About Me">About Me</h1>
         <p>
             Hello, my name is Brandon Cruz and I am a student in the University of Central Florida bootcamp. 
         </p>
@@ -30,6 +30,7 @@
     </section>
 
     <footer>
+        <h1 id="Contact Me">Contact Me</h1>
         <ul>
             <li><a href="tel:+3059043878">305-904-3878</a></li>
             <li><a href="mailto:bcruz12127@gmail.com">bcruz12127@gmail.com</a></li>
