added images to folder

--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 </head>
 
 <body>
-    <header class="box">
+    <header>
         <h1>CrandonBruz</h1>
         <nav class="navbar">
-        <a href="">About Me</a>
-        <a href="">Work</a>
-        <a href="">Contact Me</a>
-        <a href="">Resume</a>
+            <ul>
+                <li><a href="">About Me</a></li>
+                <li><a href="">Work</a></li>
+                <li><a href="">Contact Me</a></li>
+                <li><a href="">Resume</a></li>
+            </ul>
         </nav>
     </header>
-    
+    <section>
+        <img src="" alt="">
+    </section>
     <main class="vertical-line">
         
         <h1 class="title" id="About Me">About Me</h1>
