--- a/index.html
+++ b/index.html
@@ -30,21 +30,17 @@
     </header>
 
     <main>
-        <div class="top-content">
-            <div class="content-name">
-                <h3 id="About Me">About Me</h3>
-            </div>
+        <section id="About-Me">
+            <h3 class="content-name">About Me</h3>
                 <div class="paragraph">
                     <p>Hello, my name is Brandon Cruz and I am a student in the University of Central Florida bootcamp. I am taking this course to enhanse my skills as a web devloper. I would like to do this as a career and I felt this was the best route to take. Here I have some of the projects I have made as well as links to my information. <br>
                     One of my passions is baseball. I have been playing since I was 3 years old and I am currently training to play professional baseball. I love the challenge of the game. I work very hard every single day to be as successful as I have become in this sport. I know my time will come. My perserverence throughout this sport will guide me through my career in the software engineering field. As long as I work hard like I do with my passion, I can achieve anything. </p>
                 </div>
-        </div>
+        </section>
 
-        <div class="middle-content">
-            <div class="middle-content-name">
-                    <h3 id="Work">Work</h3>
-                </div>
-                <section class="flex-container">
+        <section id="Work">
+            <h3 class="content-name">Work</h3>
+                <div class="flex-container">
                     <div class="flex-item">
                         <img src="./assets/images/02-portfolio-4.jpg" alt="">
                     </div>
@@ -60,22 +56,20 @@
                     <div class="flex-item">
                         <img src="./assets/images/02-run-buddy.jpg" alt="">
                     </div>
-                </section>
+                </div>
             </div>
-        </div>
+        </section>
 
-        <div class="final-content">
-            <div class="final-content-name">
-                <h3 id="Contact Me">Contact Me</h3>
-            </div>
-            <div>
+        <section id="Contact-Me">
+            <h3 class="content-name">Contact Me</h3>
+            <div class="final-content">
                 <a href="tel:+3059043878">305-904-3878</a>
                 <a href="mailto:bcruz12127@gmail.com">bcruz12127@gmail.com</a>
                 <a href="https://github.com/crandonbruz">GitHub</a>
                 <a href="">Twitter</a>
                 <a href="">Apple Music</a>
             </div>
-        </div>
+        </section>
     </main>
     
 </body>
