edited some css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section id="Work">
             <h3 class="content-name">Work</h3>
                 <div class="flex-container">
-                    <div class="flex-item">
+                    <div class="flex-item big-picture">
                         <img src="./assets/images/02-portfolio-4.jpg" alt="">
                     </div>
                     <div class="flex-item">
