added project one to my portfolio

--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
               
                 <div class="flex-container">
                     <div class="flex-item big-picture">
-                        <img src="./assets/images/02-portfolio-4.jpg" alt="">
-                        <h4>Surf Report <br> Mern Stack</h4>
+                        <img src="./assets/images/Main merry wishlist.png" alt="">
+                        <a href="https://wyattbensman.github.io/the-merry-wishlist/">The Merry Wishlist <br> HTML/CSS/Javascript</a>
                     </div>
                     <div class="flex-item">
                         <img src="./assets/images/02-portfolio-1.jpg" alt="">
-                        <h4>LED Wall <br> Node/loT </h4>
+                        <a href="">LED Wall <br> Node/loT </a>
                     </div>
                     <div class="flex-item">
                         <img src="./assets/images/02-portfolio-2.jpg" alt="">
-                        <h4>Calculator <br> React/Javascript/CSS</h4>
+                        <a href="">Calculator <br> React/Javascript/CSS</a>
                     </div>
                     <div class="flex-item">
                         <img src="./assets/images/02-portfolio-3.jpg" alt="">
-                        <h4>Pastel Puzzles <br> MERN Stack</h4>
+                        <a href="">Pastel Puzzles <br> MERN Stack</a>
                     </div>
                     <div class="flex-item">
                         <img src="./assets/images/02-run-buddy.jpg" alt="">
-                        <h4>Run Buddy <br> HTML/CSS</h4>
+                        <a href=""> Run Buddy <br> HTML/CSS</a>
                     </div>
                 </div>
              
