--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                         <a href="https://wyattbensman.github.io/the-merry-wishlist/">The Merry Wishlist <br> HTML/CSS/Javascript</a>
                     </div>
                     <div class="flex-item">
-                        <img src="./assets/images/02-portfolio-1.jpg" alt="">
-                        <a href="">LED Wall <br> Node/loT </a>
+                        <img src="./assets/images/Screenshot 2023-08-16 122313.png" alt="">
+                        <a href="https://scoreboard-analytics-ce788d556490.herokuapp.com/">Scoreboard Analytics<br> Node/loT </a>
                     </div>
                     <div class="flex-item">
                         <img src="./assets/images/02-portfolio-2.jpg" alt="">
