--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <h1>CrandonBruz</h1>
             </div>
                 <div class="navbar">
-                    <a href="">About Me</a>
-                    <a href="">Work</a>
-                    <a href="">Contact Me</a>
+                    <a href="#About-Me">About Me</a>
+                    <a href="#Work">Work</a>
+                    <a href="#Contact-Me">Contact Me</a>
                     <a href="">Resume</a>                
                 </div>
             </div>
