added new styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="top-header">
             <div class="website-title">
-                <h1>CrandonBruz</h1>
+                <a href="index.html">CrandonBruz</a>
             </div>
                 <div class="navbar">
                     <a href="#About-Me">About Me</a>
