--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
               
                 <div class="flex-container">
                     <div class="flex-item big-picture">
-                        <img src="./assets/images/Main merry wishlist.png" alt="">
+                        <img src="./assets/images/merry-wishlist.png" alt="">
                         <a href="https://wyattbensman.github.io/the-merry-wishlist/">The Merry Wishlist <br> HTML/CSS/Javascript</a>
                     </div>
                     <div class="flex-item">
-                        <img src="./assets/images/Screenshot 2023-08-16 122313.png" alt="">
+                        <img src="./assets/images/scoreboard-analytics.png" alt="">
                         <a href="https://scoreboard-analytics-ce788d556490.herokuapp.com/">Scoreboard Analytics<br> Node/loT </a>
                     </div>
                     <div class="flex-item">
